# unistar-coworker

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRIVACY.md  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_CN.md  SECURITY.md  SUPPORT.md  base-tool-plan.md  build.rs  commitlint.config.mjs  coworker.example.yaml  coworker.minimal.yaml  coworker.yaml  deny.toml  design.md  package-lock.json  package.json  skill-agent-harness.md  tui-improve-plan.md
.cargo/: config.toml
.claude/rules/: conventional-commits.md
.cursor/rules/: conventional-commits.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docker.yml  release.yml
agents/: README.md
agents/breaking-sniff/: AGENT.md
agents/chat/: AGENT.md
agents/ci-efficiency/: AGENT.md
agents/comment-assist/: AGENT.md
agents/daily-work/: AGENT.md
agents/flaky-govern/: AGENT.md
agents/issue-triage/: AGENT.md
agents/light-review/: AGENT.md
agents/main-guard/: AGENT.md
agents/merge-health/: AGENT.md
agents/my-pr-brief/: AGENT.md
agents/oncall-handoff/: AGENT.md
agents/pr-hygiene/: AGENT.md
agents/regression-link/: AGENT.md
agents/release-duty/: AGENT.md
agents/release-notes/: AGENT.md
agents/review-radar/: AGENT.md
agents/security-digest/: AGENT.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  catalog.rs  chat.rs  daemon.rs  doctor_init.rs  export.rs  headless.rs  lib.rs  report.rs  rpc.rs  runtime.rs  store.rs  terminal.rs  triage.rs  upgrade_check.rs
crates/core/: Cargo.toml
crates/core/src/: approval_payload.rs  config.rs  diagnostics.rs  error.rs  exit_codes.rs  lib.rs  logging.rs  repo.rs  upgrade.rs
crates/core/src/agent/: ask_user_tool.rs  bash_tool.rs  chat_completion_judge.rs  chat_discovery.rs  chat_duplicate.rs  chat_loop.rs  chat_mutating.rs  chat_readonly.rs  chat_stream.rs  ci_efficiency.rs  context.rs  file_edit_tool.rs  file_text.rs  harness_tools.rs  hooks.rs  mod.rs  oncall.rs  parse.rs  python_tool.rs  redact.rs  review_gate.rs  review_radar.rs  runtime_context.rs  tool_catalog.rs  triage.rs  web_fetch_tool.rs  workflow_harness.rs
crates/core/src/app/: approval.rs  events.rs  mod.rs
crates/core/src/engine/: approvals.rs  chat.rs  embedded_prompts.rs  mod.rs  playbook.rs  prompt.rs  skill.rs  skill_routing.rs
crates/core/src/github/: args.rs  ci.rs  ci_common.rs  ci_fingerprint.rs  ci_logs.rs  error.rs  events.rs  exec.rs  harness.rs  issue.rs  policy.rs  pr_ci.rs  release.rs  repo.rs
crates/core/src/llm/: chat.rs  client.rs  mod.rs  ollama.rs
crates/core/src/mcp/: cap.rs  pool.rs  registry.rs  stdio.rs
crates/core/src/store/: compact.rs  json.rs  migrate.rs  mod.rs  model.rs  sqlite.rs
crates/tui/: Cargo.toml
crates/tui/src/: approval_modal.rs  chat.rs  context_panel.rs  detail_cache.rs  lib.rs  markdown.rs  spinner.rs  theme.rs
crates/unistar-coworker/: Cargo.toml
crates/unistar-coworker/src/: main.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: PROTOCOL.md  api_tests.rs  lib.rs  snapshot.rs  turn_parts.rs  ui.rs
crates/web/src/static/: app.js  markdown.js  style.css
docs/: COMMITS.md  RPC.md  STABILITY.md  context-budget.md  docker.md  local-models.md  mcp-recipes.md  releasing.md  troubleshooting.md  upgrading.md  workflows.md
packaging/: README.md
packaging/workdir-template/: AGENTS.md  coworker.yaml
prompts/: bash-review.md  chat-completion-judge.md  chat.md  file-edit-review.md  python-review.md
scripts/: build-helpers.sh  check-versions.sh  package.sh  setup-git-hooks.sh  start-agent.sh  validate-commit-msg.sh  validate-commit-range.sh
scripts/hooks/: commit-msg
skills/: README.md
skills/_base/: SKILL_TEMPLATE.md  TOOLS.md
skills/ci-health/: SKILL.md
skills/ci-triage/: SKILL.md
skills/code-edit/: SKILL.md
skills/daily-work/: SKILL.md
skills/debug/: SKILL.md
skills/digest-style/: SKILL.md
skills/external-ci/: SKILL.md
skills/flaky-tests/: SKILL.md
skills/general-agent-tone/: SKILL.md
skills/gh-cli/: SKILL.md
skills/git-workflow/: SKILL.md
skills/github-ops-pack/: README.md
skills/github-ops-tone/: SKILL.md
skills/issue-tracker/: SKILL.md
skills/main-guard/: SKILL.md
skills/my-prs/: SKILL.md
skills/oncall-store/: SKILL.md
skills/pr-hygiene/: SKILL.md
skills/pr-merge/: SKILL.md
skills/pr-review/: SKILL.md
skills/release-backport/: SKILL.md
skills/release-duty/: SKILL.md
skills/repo-explore/: SKILL.md
skills/review-radar/: SKILL.md
skills/security-alerts/: SKILL.md
skills/test-run/: SKILL.md
skills/web-fetch/: SKILL.md
src/: approval_payload.rs  config.rs  diagnostics.rs  error.rs  exit_codes.rs  logging.rs  main.rs  terminal.rs
src/agent/: bash_tool.rs  breaking_sniff.rs  budget.rs  chat_completion_judge.rs  chat_discovery.rs  chat_duplicate.rs  chat_loop.rs  chat_mutating.rs  chat_readonly.rs  chat_stream.rs  ci_efficiency.rs  ci_runs.rs  comment_assist.rs  context.rs  file_edit_tool.rs  file_text.rs  file_tools.rs  flaky_govern.rs  harness_errors.rs  harness_tools.rs  hooks.rs  issue_triage.rs  light_review.rs  log_pages.rs  loop.rs  main_guard.rs  merge_health.rs  mod.rs  my_pr_brief.rs  oncall.rs  parse.rs  pr_hygiene.rs  python_tool.rs  redact.rs  regression_link.rs  release.rs  release_notes.rs  review_gate.rs  review_radar.rs  runtime_context.rs  (+8 more)
src/app/: events.rs  mod.rs
src/engine/: approvals.rs  chat.rs  embedded_prompts.rs  mod.rs  playbook.rs  prompt.rs  rules.rs  scheduler.rs  skill.rs  skill_routing.rs  workflow_registry.rs  workflows.rs
src/github/: args.rs  backport.rs  checks.rs  ci.rs  ci_check_url.rs  ci_common.rs  ci_digest.rs  ci_fingerprint.rs  ci_health.rs  ci_logs.rs  ci_tier2.rs  exec.rs  (+16 more)
web-e2e/: .gitignore  package.json  playwright.config.ts
web-ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
(+143 files in other folders)
