[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tui",
    "crates/web",
    "crates/cli",
    "crates/unistar-coworker",
]

[workspace.package]
version = "2.4.0"
edition = "2021"
license = "MIT"
description = "Local GitHub ops secretary with TUI, MCP, and local LLM"

[patch.crates-io]
chromiumoxide = { path = "vendor/chromiumoxide" }
