[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tui",
    "crates/web",
    "crates/cli",
    "crates/unistar-coworker",
]

[workspace.package]
version = "3.0.1"
edition = "2021"
license = "MIT"
description = "Local-first general agent for local LLMs — TUI, Web UI, workspace tools, optional MCP and GitHub harness"

[patch.crates-io]
chromiumoxide = { path = "vendor/chromiumoxide" }
