[package]
name = "coworker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for unistar-coworker"

[dependencies]
coworker-core = { path = "../core", default-features = false }
coworker-tui = { path = "../tui" }
coworker-web = { path = "../web" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
pulldown-cmark = "0.13"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "signal"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2"

[dev-dependencies]
tempfile = "3"
