[package]
name = "coworker-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for unistar-coworker"

[dependencies]
coworker-core = { path = "../core", default-features = false }
anyhow = "1"
crossterm = "0.28"
futures-util = "0.3"
pulldown-cmark = "0.13"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
tempfile = "3"
