[package]
name = "coworker-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI server for unistar-coworker"
build = "build.rs"

[features]
default = []
embed-web-ui = []

[dependencies]
coworker-core = { path = "../core", default-features = false }
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
coworker-core = { path = "../core", default-features = false }
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
